@@ -2,28 +2,19 @@ package utxo
 
 import (
 	"github.com/piotrnar/gocoin/lib/btc"
-	"github.com/piotrnar/gocoin/lib/script"
-	"sync"
 )
 
 /*
-	These are functions for dealing with compressed UTXO records
+	These are functions for dealing with uncompressed UTXO records
 */
 
-var (
-	comp_pool_mutex sync.Mutex //<- consider using this mutex for multi-thread serializations
-	comp_val        []uint64
-	comp_scr        [][]byte
-	ComprScrLen     = []int{21, 21, 33, 33, 33, 33}
-)
-
-func FullUtxoRecC(dat []byte) *UtxoRec {
+func FullUtxoRecU(dat []byte) *UtxoRec {
 	var key UtxoKeyType
 	copy(key[:], dat[:UtxoIdxLen])
-	return NewUtxoRecC(key, dat[UtxoIdxLen:])
+	return NewUtxoRec(key, dat[UtxoIdxLen:])
 }
 
-func NewUtxoRecStaticC(key UtxoKeyType, dat []byte) *UtxoRec {
+func NewUtxoRecStaticU(key UtxoKeyType, dat []byte) *UtxoRec {
 	var off, n, i, rec_idx int
 	var u64, idx uint64
 
@@ -58,24 +49,19 @@ func NewUtxoRecStaticC(key UtxoKeyType, dat []byte) *UtxoRec {
 
 		u64, n = btc.VULe(dat[off:])
 		off += n
-		sta_rec.Outs[idx].Value = btc.DecompressAmount(uint64(u64))
+		sta_rec.Outs[idx].Value = uint64(u64)
 
 		i, n = btc.VLen(dat[off:])
-		if i < 6 {
-			i = ComprScrLen[i]
-			sta_rec.Outs[idx].PKScr = script.DecompressScript(dat[off : off+i])
-		} else {
-			off += n
-			i -= 6
-			sta_rec.Outs[idx].PKScr = dat[off : off+i]
-		}
+		off += n
+
+		sta_rec.Outs[idx].PKScr = dat[off : off+i]
 		off += i
 	}
 
 	return &sta_rec
 }
 
-func NewUtxoRecC(key UtxoKeyType, dat []byte) *UtxoRec {
+func NewUtxoRecU(key UtxoKeyType, dat []byte) *UtxoRec {
 	var off, n, i int
 	var u64, idx uint64
 	var rec UtxoRec
@@ -101,23 +87,18 @@ func NewUtxoRecC(key UtxoKeyType, dat []byte) *UtxoRec {
 
 		u64, n = btc.VULe(dat[off:])
 		off += n
-		rec.Outs[idx].Value = btc.DecompressAmount(uint64(u64))
+		rec.Outs[idx].Value = uint64(u64)
 
 		i, n = btc.VLen(dat[off:])
-		if i < 6 {
-			i = ComprScrLen[i]
-			rec.Outs[idx].PKScr = script.DecompressScript(dat[off : off+i])
-		} else {
-			off += n
-			i -= 6
-			rec.Outs[idx].PKScr = dat[off : off+i]
-		}
+		off += n
+
+		rec.Outs[idx].PKScr = dat[off : off+i]
 		off += i
 	}
 	return &rec
 }
 
-func OneUtxoRecC(key UtxoKeyType, dat []byte, vout uint32) *btc.TxOut {
+func OneUtxoRecU(key UtxoKeyType, dat []byte, vout uint32) *btc.TxOut {
 	var off, n, i int
 	var u64, idx uint64
 	var res btc.TxOut
@@ -148,53 +129,29 @@ func OneUtxoRecC(key UtxoKeyType, dat []byte, vout uint32) *btc.TxOut {
 		off += n
 
 		i, n = btc.VLen(dat[off:])
+		off += n
 
 		if uint32(idx) == vout {
-			res.Value = btc.DecompressAmount(uint64(u64))
-			if i < 6 {
-				i = ComprScrLen[i]
-				res.Pk_script = script.DecompressScript(dat[off : off+i])
-			} else {
-				off += n
-				i -= 6
-				res.Pk_script = dat[off : off+i]
-			}
+			res.Value = uint64(u64)
+			res.Pk_script = dat[off : off+i]
 			return &res
-		}
-
-		if i < 6 {
-			i = ComprScrLen[i]
-		} else {
-			off += n
-			i -= 6
 		}
 		off += i
 	}
 	return nil
 }
 
-func SerializeC(rec *UtxoRec, full bool, use_buf []byte) (buf []byte) {
+// Serialize() returns UTXO-heap pointer to the freshly allocated serialized record.
+//  rec - UTXO record to serialize
+//  full - to have entire 256 bits of TxID at the beginning of the record.
+//  use_buf - the data will be serialized into this memory. if nil, it will be allocated by Memory_Malloc().
+func SerializeU(rec *UtxoRec, full bool, use_buf []byte) (buf []byte) {
 	var le, of int
 	var any_out bool
 
 	outcnt := uint64(len(rec.Outs) << 1)
 	if rec.Coinbase {
 		outcnt |= 1
-	}
-
-	// <- consider anabling this for multi-thread serializations
-	comp_pool_mutex.Lock()
-	defer comp_pool_mutex.Unlock()
-
-	// Only allocate when used for a first time, so no mem is wasted when not using compression
-	if int(outcnt) > len(comp_val) {
-		if outcnt > 30001 {
-			comp_val = make([]uint64, outcnt)
-			comp_scr = make([][]byte, outcnt)
-		} else {
-			comp_val = make([]uint64, 30001)
-			comp_scr = make([][]byte, 30001)
-		}
 	}
 
 	if full {
@@ -209,15 +166,9 @@ func SerializeC(rec *UtxoRec, full bool, use_buf []byte) (buf []byte) {
 	for i, r := range rec.Outs {
 		if rec.Outs[i] != nil {
 			le += btc.VLenSize(uint64(i))
-			comp_val[i] = btc.CompressAmount(r.Value)
-			comp_scr[i] = script.CompressScript(r.PKScr)
-			le += btc.VLenSize(comp_val[i])
-			if comp_scr[i] != nil {
-				le += len(comp_scr[i])
-			} else {
-				le += btc.VLenSize(uint64(6 + len(r.PKScr)))
-				le += len(r.PKScr)
-			}
+			le += btc.VLenSize(r.Value)
+			le += btc.VLenSize(uint64(len(r.PKScr)))
+			le += len(r.PKScr)
 			any_out = true
 		}
 	}
@@ -243,15 +194,10 @@ func SerializeC(rec *UtxoRec, full bool, use_buf []byte) (buf []byte) {
 	for i, r := range rec.Outs {
 		if rec.Outs[i] != nil {
 			of += btc.PutULe(buf[of:], uint64(i))
-			of += btc.PutULe(buf[of:], comp_val[i])
-			if comp_scr[i] != nil {
-				copy(buf[of:], comp_scr[i])
-				of += len(comp_scr[i])
-			} else {
-				of += btc.PutULe(buf[of:], uint64(6+len(r.PKScr)))
-				copy(buf[of:], r.PKScr)
-				of += len(r.PKScr)
-			}
+			of += btc.PutULe(buf[of:], r.Value)
+			of += btc.PutULe(buf[of:], uint64(len(r.PKScr)))
+			copy(buf[of:], r.PKScr)
+			of += len(r.PKScr)
 		}
 	}
 	return
