@@ -25,7 +25,13 @@ func main() {
 		fmt.Println(er.Error())
 		return
 	}
-	fmt.Println("Last Block Height:", binary.LittleEndian.Uint64(buf[:8]))
+	u64 := binary.LittleEndian.Uint64(buf[:8])
+	if (u64 & 0x8000000000000000) != 0 {
+		fmt.Println("Records: Compressed")
+	} else {
+		fmt.Println("Records: Not compressed")
+	}
+	fmt.Println("Last Block Height:", uint32(u64))
 	fmt.Println("Last Block Hash:", btc.NewUint256(buf[8:40]).String())
 	fmt.Println("Number of UTXO records:", binary.LittleEndian.Uint64(buf[40:48]))
 }
